; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_ctl.c_ip_vs_rs_hashkey.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_ctl.c_ip_vs_rs_hashkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.nf_inet_addr = type { i32* }

@IP_VS_RTAB_BITS = common dso_local global i32 0, align 4
@IP_VS_RTAB_MASK = common dso_local global i32 0, align 4
@AF_INET6 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %union.nf_inet_addr*, i32)* @ip_vs_rs_hashkey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ip_vs_rs_hashkey(i32 %0, %union.nf_inet_addr* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %union.nf_inet_addr*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %union.nf_inet_addr* %1, %union.nf_inet_addr** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32 @ntohs(i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load %union.nf_inet_addr*, %union.nf_inet_addr** %5, align 8
  %12 = bitcast %union.nf_inet_addr* %11 to i32*
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = call i32 @ntohl(i32 %14)
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @IP_VS_RTAB_BITS, align 4
  %18 = lshr i32 %16, %17
  %19 = xor i32 %15, %18
  %20 = load i32, i32* %7, align 4
  %21 = xor i32 %19, %20
  %22 = load i32, i32* @IP_VS_RTAB_MASK, align 4
  %23 = and i32 %21, %22
  ret i32 %23
}

declare dso_local i32 @ntohs(i32) #1

declare dso_local i32 @ntohl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
